[package]
name = "rulx"
version = "0.0.1"
edition = "2018"
[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["consoleapi", "libloaderapi"]}
detour = "0.8.0"
[build]
target = "i686-pc-windows-msvc"